Bug #27512 Inconsistent tuples when using variable size and >16Gb datamemory
Submitted: 29 Mar 2007 10:20 Modified: 10 Apr 2007 8:31
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1 OS:Any
Assigned to: Jonas Oreland Target Version:

[29 Mar 2007 10:20] Jonas Oreland
Description:
.

How to repeat:
.

Suggested fix:
.
[29 Mar 2007 10:51] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/23252

ChangeSet@1.2449, 2007-03-29 11:05:32+02:00, tomas@whalegate.ndb.mysql.com +8 -0
  Bug #27512 Inconsistent tuples when using variable size and >16Gb datamemory
  - increase var part reference from 32 to 64 bits on 64 bit systems
  - note current patch does not allow for online upgrade from 32 to 64 bit systems or
vice versa
[29 Mar 2007 13:56] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/23285

ChangeSet@1.2450, 2007-03-29 14:10:21+02:00, tomas@whalegate.ndb.mysql.com +1 -0
  Bug #27512 Inconsistent tuples when using variable size and >16Gb datamemory
  - also run this patch on 32 bit machines to allow online upgrade
[7 Apr 2007 10:21] Tomas Ulin
5.1.18
[7 Apr 2007 10:21] Tomas Ulin
5.1.18
[10 Apr 2007 8:31] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.18 changelog.