Bug #27512 Inconsistent tuples when using variable size and >16Gb datamemory - increase var part reference from 32 to 64 bits on 64 bit systems - note current patch does not allow for online upgrade from 32 to 64 bit systems or vice versa